force-app/main/default/objects/CampaignMember/fields/Bounced_Date__c.field-meta.xml
<CustomField>
    <fullName>Bounced_Date__c</fullName>
    <label>Bounced Date</label>
    <type>DateTime</type>
</CustomField>