force-app/main/default/objects/CampaignMember/fields/Clicked_Date__c.field-meta.xml
<CustomField>
    <fullName>Clicked_Date__c</fullName>
    <label>Clicked Date</label>
    <type>DateTime</type>
</CustomField>