force-app/main/default/objects/CampaignMember/fields/Complained_Date__c.field-meta.xml
<CustomField>
    <fullName>Complained_Date__c</fullName>
    <label>Complained Date</label>
    <type>DateTime</type>
</CustomField>