force-app/main/default/objects/CampaignMember/fields/Hard_Email_Bounce_Date__c.field-meta.xml
<CustomField>
    <fullName>Hard_Email_Bounce_Date__c</fullName>
    <label>Hard Email Bounce Date</label>
    <type>DateTime</type>
</CustomField>