force-app/main/default/objects/CampaignMember/fields/Soft_Email_Bounce_Date__c.field-meta.xml
<CustomField>
    <fullName>Soft_Email_Bounce_Date__c</fullName>
    <label>Soft Email Bounce Date</label>
    <type>DateTime</type>
</CustomField>