force-app/main/default/objects/CampaignMember/fields/Unsubscribed_Date__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribed_Date__c</fullName>
    <label>Unsubscribed Date</label>
    <type>DateTime</type>
</CustomField>